# DataActorLib

./: CMakeLists.txt  README.md
DataActorLib/: GridDisplayer.hpp
GuiStuff/: GridDisplayer.hpp  Helpers.hpp  PictureInPictureWindow.cpp  PictureInPictureWindow.hpp  ScrollWindow.cpp  ScrollWindow.hpp
Tests/: DoOnGuiThread.cpp  GridDisplayTest.cpp  Packets.hpp  PictureInPictureWindowTest.cpp  ScrollWindowTest.cpp
cmake/: GuiStuffConfig.cmake.in
